<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="nytech.co.il.hit.AddnewData">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitleNewData"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAlias"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/etNAlias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUserName"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/etNUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPassword"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/etNPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btNSaveItem"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSaveIten"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
