<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/userName"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etLogPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signIn"
        android:id="@+id/txtSignin"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
